added scroll reveal

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <main>
       <div class="container" id="projects">
         <h2>Projects I have worked on</h2>
-        <div class="row">
+        <div class="row reveal">
           <div class="col-md-4 project-card">
             <div class="project-img-wrapper">
               <img
@@ -161,7 +161,7 @@
           </div>
         </div>
         <h2 id="blog">Some Blog Posts</h2>
-        <div class="row">
+        <div class="row reveal-blog">
           <article class="col-md-6 post">
             <div class="d-flex justify-content-around align-items-center">
               <div class="post-img-wrapper">
@@ -314,6 +314,7 @@
       integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
       crossorigin="anonymous"
     ></script>
+    <script src="https://unpkg.com/scrollreveal"></script>
     <script src="js/script.js"></script>
   </body>
 </html>
